# reports

./: .gitignore  2_eval_gaps.md  3_strat_analysis.md  RAG_CHATBOT.md  README.md  app.py  chainlit_app.py  fix_nltk_resources.py  i.py  important_README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.streamlit/: config.toml
chroma_vector_db/: chroma.sqlite3
modules/: __init__.py  embedding_service.py  insights_generator.py  llm_interface.py  memory_utils.py  model_selection.py  nlp_models.py  pdf_processor.py  system_setup.py  ui_components.py  utils.py  vector_store.py
rag_search/: 1_archi_provider.md  4_business_strat.md  5_ax.md  6_e2e.md
rag_search/images/: comprehensive_cost_analysis.md
tests/stress/: __init__.py  load_test.py
