[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tourism-rag-chatbot"
version = "3.0.0"
description = "Tourism-focused RAG chatbot with hybrid retrieval and analysis"
authors = [
    {name = "Satya Pratheek Tata", email = "satyapratheek.tata@edhec.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "streamlit>=1.45.0",
    "langchain-core>=0.2.0", # Already correct
    "openparse==0.7.0",
    "sentence-transformers>=2.7.0",
    "FlagEmbedding>=1.3.0",        # Already correct

    # Document Processing
    "pypdf>=3.17.0",
    "PyMuPDF>=1.23.0",             # Already correct

    # Vector Database
    "chromadb>=0.5.3",

    # UI
    "chainlit>=2.0.0",             # Already correct

    # Tourism-specific dependencies
    "nltk>=3.8.1",                 # Already correct
    "psutil>=5.9.8",

    # Utilities
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.5",

    # Code quality
    "mypy>=1.9.0",
    "ruff>=0.2.0",
    "black>=23.7.0",
]

[tool.pdm.scripts]
# Core scripts
start = "streamlit run app.py"
test = "pytest -n auto"
lint = "ruff check . --fix"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py310", "py312"]