[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "tourism-rag-chatbot"
version = "0.1.0"
description = "Optimized Tourism RAG Chatbot"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.33.0",
    "chromadb>=0.4.24",
    "ollama>=0.1.14",
    "PyMuPDF>=1.24.0",
    "sentence-transformers>=2.7.0",
    "psutil>=5.9.8",
    "openparse>=0.5.6",
    "rank-bm25>=0.2.2",
    "FlagEmbedding>=1.2.10",
    "pandas>=2.1.0",
    "altair>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88